<resources>
    <string name="app_name">DisDet for drivers</string>
    <string name="current_ride_length">Current ride length</string>
    <string name="start_ride_btn_text">START RIDE</string>
    <string name="connecting">Connecting…</string>
    <string name="please_wait">Please wait</string>
    <string name="connect">Connect to camera</string>
    <string name="end_ride_btn_text">END RIDE</string>
    <string name="connected">Connected</string>
    <string name="hello">"Hello, "</string>
</resources>
