<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
            android:id="@+id/connect_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/connect"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
    />
    <Button
            android:text="@string/start_ride_btn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startRideButton" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/endRideButton"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="256dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/end_ride_btn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endRideButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp" android:layout_marginTop="256dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/current_ride_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:layout_marginTop="160dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:fontFamily="monospace"
            android:textSize="24sp"/>
    <TextView
            android:layout_width="105dp"
            android:layout_height="36dp"
            android:id="@+id/currentLengthTextView" android:layout_marginTop="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:fontFamily="monospace"
            android:textSize="18sp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.493" app:layout_constraintTop_toTopOf="parent"
            android:text="00:00:00"/>
    <TextView
            android:layout_width="130dp"
            android:layout_height="36dp"
            android:id="@+id/emailTextView2" android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:fontFamily="monospace"
            android:textSize="18sp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:text="testman1" android:width="130dp" android:textStyle="bold"/>
    <TextView
            android:text="@string/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:layout_marginTop="60dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:fontFamily="monospace"
            android:textSize="24sp"/>

</android.support.constraint.ConstraintLayout>
